<resources>
    <string name="app_name">MeowMedia2</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="meowmedia_image_logo">MeowMedia Image Logo</string>
    <string name="meowmedia_text_logo">MeowMedia Text Logo</string>
</resources>