<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".loginandregistration.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView_login_logo"
        android:layout_width="87dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/meowmedia_image_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView_main_text"
        android:layout_width="300dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/meowmedia_text_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_login_logo"
        app:srcCompat="@drawable/title"
        tools:srcCompat="@drawable/title" />

    <Button
        android:id="@+id/button_registration_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/darkBlue"
        android:textColor="@color/green"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editText_registration_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@color/creme"
        android:backgroundTint="@color/creme"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/darkGreen"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_main_text" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@color/creme"
        android:backgroundTint="@color/creme"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/darkGreen"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_registration_confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registration_username" />

    <EditText
        android:id="@+id/editText_registration_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@color/creme"
        android:backgroundTint="@color/creme"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/darkGreen"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_registration_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editText_registration_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@color/creme"
        android:backgroundTint="@color/creme"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="@color/darkGreen"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/button_registration_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registration_confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>